Fixed alignment for property name and X in image type map filter

--- a/packages/scandipwa/src/component/ResetAttributes/ResetAttributes.style.scss
+++ b/packages/scandipwa/src/component/ResetAttributes/ResetAttributes.style.scss
@@ -38,6 +38,7 @@
         img {
             width: 32px;
             object-fit: contain;
+            vertical-align: middle;
         }
     }
 
